--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ Although you can use them, for a more unique website, replace these images with 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
 						<ul class="dropdown-menu" aria-labelledby="about-us">
-							<li><a href="#">Engage</a></li>
-							<li><a href="#">Pontificate</a></li>
-							<li><a href="#">Synergize</a></li>
+							<li><a href="#">Baby Sitting</a></li>
+							<li><a href="#">LandScaping</a></li>
+							<li><a href="#">Bike Repair</a></li>
 						</ul>
 					</li>
                     <li>
@@ -79,9 +79,9 @@ Although you can use them, for a more unique website, replace these images with 
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Dramatically Engage</h1>
-                <p>Objectively innovate empowered manufactured products whereas parallel platforms.</p>
-                <a href="#" class="btn btn-primary btn-lg">Engage Now</a>
+                <h1>Cass Brother's Business</h1>
+                <p>Two brothers commited to delivering quality and making your life an ease!</p>
+                <a href="ContactUs" class="btn btn-primary btn-lg">Hire Now</a>
             </div>
         </div>
     </header>
