--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Although you can use them, for a more unique website, replace these images with 
                     <img class="img-responsive img-circle center-block" src="images/microphone.jpg" alt="">
                 </div>
                 <div class="col-sm-6">
-                	<h2 class="section-header">Best in Class</h2>
+                	<h2 class="section-header">About Us</h2>
                 	<p class="lead text-muted">Holisticly predominate extensible testing procedures for reliable supply chains. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
                 	<a href="#" class="btn btn-primary btn-lg">Classify It</a>
                 </div>
@@ -139,14 +139,14 @@ Although you can use them, for a more unique website, replace these images with 
         	<a href="#">
 				<div class="col-md-4 promo-item item-1">
 					<h3>
-						Unleash
+						Baby Sitting
 					</h3>
 				</div>
             </a>
             <a href="#">
 				<div class="col-md-4 promo-item item-2">
 					<h3>
-						Synergize
+						LandScaping
 					</h3>
 				</div>
             </a>
@@ -154,7 +154,7 @@ Although you can use them, for a more unique website, replace these images with 
 			<a href="#">
 				<div class="col-md-4 promo-item item-3">
 					<h3>
-						Procrastinate
+						Bike Repair
 					</h3>
 				</div>
             </a>
@@ -178,15 +178,15 @@ Although you can use them, for a more unique website, replace these images with 
         <div class="contact">
         	<div class="container">
 				<h2 class="section-heading">Contact Us</h2>
-				<p><span class="glyphicon glyphicon-earphone"></span><br> +1(23) 456 7890</p>
-				<p><span class="glyphicon glyphicon-envelope"></span><br> info@example.com</p>
+				<p><span class="glyphicon glyphicon-earphone"></span><br> +1(860) 523 4463</p>
+				<p><span class="glyphicon glyphicon-envelope"></span><br> CassBrothersLLC@Gmail.com</p>
         	</div>
         </div>
 
         <!-- Copyright etc -->
         <div class="small-print">
         	<div class="container">
-        		<p>Copyright &copy; Example.com 2015</p>
+        		<p>Copyright &copy; CassBrothersLLC 2016</p>
         	</div>
         </div>
 
