--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Although you can use them, for a more unique website, replace these images with 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>CassBrothersLLC</title>
+    <title>CassBrothers Online</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,6 +28,8 @@ Although you can use them, for a more unique website, replace these images with 
 
     <!-- Custom Fonts from Google -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
 </head>
 
@@ -46,7 +48,7 @@ Although you can use them, for a more unique website, replace these images with 
                 </button>
                 <a class="navbar-brand" href="#">
                 	<span class="glyphicon glyphicon-fire"></span>
-                	CassBrothersLLC
+                	CassBrothers Online
                 </a>
             </div>
             <!-- Navbar links -->
@@ -92,8 +94,8 @@ Although you can use them, for a more unique website, replace these images with 
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                 	<span class="glyphicon glyphicon-apple" style="font-size: 60px"></span>
-                    <h2 class="section-heading">Completely synergize resource taxing relationships</h2>
-                    <p class="text-light">Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+                    <h2 class="section-heading">What we do</h2>
+                    <p class="text-light">The two brothers of the cass family who are looking to assist you in any way. We have four years of expeariance with baby sitting many different children. We have two years of expeariance landscaping, specializing in mowing lawns. We have also been fixing, tinkering, and working with bikes for two years.</p>
                 </div>
             </div>
         </div>
@@ -108,8 +110,8 @@ Although you can use them, for a more unique website, replace these images with 
                 </div>
                 <div class="col-sm-6">
                 	<h2 class="section-header">About Us</h2>
-                	<p class="lead text-muted">Holisticly predominate extensible testing procedures for reliable supply chains. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
-                	<a href="#" class="btn btn-primary btn-lg">Classify It</a>
+                    <p class="lead text-muted">We always look to do a therough and well done job adjusting to every situation thrown our way. We have affordable prices and are always willing to negotiate.</p>
+
                 </div>
 
             </div>
@@ -121,9 +123,9 @@ Although you can use them, for a more unique website, replace these images with 
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                	<h2 class="section-header">Superior Quality</h2>
-                	<p class="lead text-light">Holisticly predominate extensible testing procedures for reliable supply chains. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
-                	<a href="#" class="btn btn-default btn-lg">Test It</a>
+                	<h2 class="section-header">Services</h2>
+                	<p class="lead text-light">We offer a large varriety of services and options to make your experience unique and well done. Our large range of skills and services makes sure you will be covered In many situations.</p>
+                	<a href="#" class="btn btn-default btn-lg">Look at options</a>
                 </div>
                 <div class="col-sm-6">
                     <img class="img-responsive img-circle center-block" src="images/iphone.jpg" alt="">
