--- a/index.html
+++ b/index.html
@@ -87,6 +87,33 @@ Although you can use them, for a more unique website, replace these images with 
             </div>
         </div>
     </header>
+    <!-- Promos -->
+	<div class="container-fluid">
+        <div class="row promo">
+        	<a href="#">
+				<div class="col-md-4 promo-item item-1">
+					<h3>
+						Baby Sitting
+					</h3>
+				</div>
+            </a>
+            <a href="#">
+				<div class="col-md-4 promo-item item-2">
+					<h3>
+						LandScaping
+					</h3>
+				</div>
+            </a>
+
+			<a href="#">
+				<div class="col-md-4 promo-item item-3">
+					<h3>
+						Bike Repair
+					</h3>
+				</div>
+            </a>
+        </div>
+    </div><!-- /.container-fluid -->
 
 	<!-- Intro Section -->
     <section class="intro">
@@ -95,7 +122,7 @@ Although you can use them, for a more unique website, replace these images with 
                 <div class="col-lg-8 col-lg-offset-2">
                 	<span class="glyphicon glyphicon-apple" style="font-size: 60px"></span>
                     <h2 class="section-heading">What we do</h2>
-                    <p class="text-light">The two brothers of the cass family who are looking to assist you in any way. We have four years of expeariance with baby sitting many different children. We have two years of expeariance landscaping, specializing in mowing lawns. We have also been fixing, tinkering, and working with bikes for two years.</p>
+                    <p class="text-light">The two brothers of the cass family who are looking to assist you in any way. We have four years of expeariance with baby sitting many different children. We have three years of expeariance landscaping, specializing in mowing lawns. We have also been fixing, tinkering, and working with bikes for two years.</p>
                 </div>
             </div>
         </div>
@@ -135,43 +162,8 @@ Although you can use them, for a more unique website, replace these images with 
         </div>
     </section>
 
-    <!-- Promos -->
-	<div class="container-fluid">
-        <div class="row promo">
-        	<a href="#">
-				<div class="col-md-4 promo-item item-1">
-					<h3>
-						Baby Sitting
-					</h3>
-				</div>
-            </a>
-            <a href="#">
-				<div class="col-md-4 promo-item item-2">
-					<h3>
-						LandScaping
-					</h3>
-				</div>
-            </a>
 
-			<a href="#">
-				<div class="col-md-4 promo-item item-3">
-					<h3>
-						Bike Repair
-					</h3>
-				</div>
-            </a>
-        </div>
-    </div><!-- /.container-fluid -->
 
-	<!-- Content 3 -->
-     <section class="content content-3">
-        <div class="container">
-			<h2 class="section-header"><span class="glyphicon glyphicon-pushpin text-primary"></span><br> Sanity Check</h2>
-			<p class="lead text-muted">Holisticly predominate extensible testing procedures for reliable supply chains. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
-                    <a href="#" class="btn btn-primary btn-lg">Check Now</a>
-            </div>
-        </div>
-    </section>
 
 	<!-- Footer -->
     <footer class="page-footer">
