--- a/index.html
+++ b/index.html
@@ -172,15 +172,15 @@ Although you can use them, for a more unique website, replace these images with 
         <div class="contact">
         	<div class="container">
 				<h2 class="section-heading">Contact Us</h2>
-				<p><span class="glyphicon glyphicon-earphone"></span><br> +1(860) 523 4463</p>
-				<p><span class="glyphicon glyphicon-envelope"></span><br> CassBrothersLLC@Gmail.com</p>
+				<p><span class="glyphicon glyphicon-earphone"></span><br> +1(860) 748 8655</p>
+				<p><span class="glyphicon glyphicon-envelope"></span><br> CassBrothersServices@Gmail.com</p>
         	</div>
         </div>
 
         <!-- Copyright etc -->
         <div class="small-print">
         	<div class="container">
-        		<p>Copyright &copy; CassBrothersLLC 2016</p>
+        		<p>Copyright &copy; CassBrothers 2016</p>
         	</div>
         </div>
 
