--- a/landscaping.html
+++ b/landscaping.html
@@ -11,7 +11,7 @@ Although you can use them, for a more unique website, replace these images with 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>CassBrothers Online</title>
+    <title>LandScaping</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@ Although you can use them, for a more unique website, replace these images with 
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                 	<span class="glyphicon glyphicon-fire"></span>
                 	CassBrothers Online
                 </a>
@@ -55,7 +55,7 @@ Although you can use them, for a more unique website, replace these images with 
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active">
-                        <a href="#">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="#">Products</a>
@@ -64,7 +64,7 @@ Although you can use them, for a more unique website, replace these images with 
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
 						<ul class="dropdown-menu" aria-labelledby="about-us">
 							<li><a href="#">Baby Sitting</a></li>
-							<li><a href="landscaping.html">LandScaping</a></li>
+							<li><a href="#">LandScaping</a></li>
 							<li><a href="#">Bike Repair</a></li>
 						</ul>
 					</li>
@@ -81,39 +81,11 @@ Although you can use them, for a more unique website, replace these images with 
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Cass Brother's Business</h1>
-                <p>Two brothers commited to delivering quality and making your life an ease!</p>
-                <a href="ContactUs" class="btn btn-primary btn-lg">Hire Now</a>
+                <h1>Landscaping</h1>
+
             </div>
         </div>
     </header>
-    <!-- Promos -->
-	<div class="container-fluid">
-        <div class="row promo">
-        	<a href="#">
-				<div class="col-md-4 promo-item item-1">
-					<h3>
-						Baby Sitting
-					</h3>
-				</div>
-            </a>
-            <a href="landscaping.html">
-				<div class="col-md-4 promo-item item-2">
-					<h3>
-						LandScaping
-					</h3>
-				</div>
-            </a>
-
-			<a href="#">
-				<div class="col-md-4 promo-item item-3">
-					<h3>
-						Bike Repair
-					</h3>
-				</div>
-            </a>
-        </div>
-    </div><!-- /.container-fluid -->
 
 	<!-- Intro Section -->
     <section class="intro">
@@ -121,43 +93,20 @@ Although you can use them, for a more unique website, replace these images with 
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                 	<span class="glyphicon glyphicon-apple" style="font-size: 60px"></span>
-                    <h2 class="section-heading">What we do</h2>
-                    <p class="text-light">The two brothers of the cass family who are looking to assist you in any way. We have four years of expeariance with baby sitting many different children. We have three years of expeariance landscaping, specializing in mowing lawns. We have also been fixing, tinkering, and working with bikes for two years.</p>
+                    <h2 class="section-heading">Services we offer</h2>
+                    <p class="text-light">
+                    <h3>We offer:</h3>
+                    <div>Lawn Mowing</div>
+                    <div>Hedge clipping</div>
+                    <div>Edgeing</div>
+                    <div>Maintaining gardens</div>
+                    <div>Watering Grass and other plants</div>
+                    <div>Weeding</div>
+                    <dic>Mulching</dic>
+                    <div>Small Tree Removal</div>
+                    <div>Leaf and Brush removal</div>
+                    </p>
                 </div>
-            </div>
-        </div>
-    </section>
-
-	<!-- Content 1 -->
-    <section class="content">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <img class="img-responsive img-circle center-block" src="images/microphone.jpg" alt="">
-                </div>
-                <div class="col-sm-6">
-                	<h2 class="section-header">About Us</h2>
-                    <p class="lead text-muted">We always look to do a therough and well done job adjusting to every situation thrown our way. We have affordable prices and are always willing to negotiate.</p>
-
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-	<!-- Content 2 -->
-     <section class="content content-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                	<h2 class="section-header">Services</h2>
-                	<p class="lead text-light">We offer a large varriety of services and options to make your experience unique and well done. Our large range of skills and services makes sure you will be covered In many situations.</p>
-                	<a href="#" class="btn btn-default btn-lg">Look at options</a>
-                </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive img-circle center-block" src="images/iphone.jpg" alt="">
-                </div>
-
             </div>
         </div>
     </section>
