Made Bike repaire page, added Hrefs to the others :P

--- a/bikerepair.html
+++ b/bikerepair.html
@@ -81,7 +81,7 @@ Although you can use them, for a more unique website, replace these images with 
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Landscaping</h1>
+                <h1>Bike Repair</h1>
 
             </div>
         </div>
@@ -96,15 +96,16 @@ Although you can use them, for a more unique website, replace these images with 
                     <h2 class="section-heading">Services we offer</h2>
                     <p class="text-light">
                     <h3>We offer:</h3>
-                    <div>Lawn Mowing</div>
-                    <div>Hedge clipping</div>
-                    <div>Edgeing</div>
-                    <div>Maintaining gardens</div>
-                    <div>Watering Grass and other plants</div>
-                    <div>Weeding</div>
-                    <dic>Mulching</dic>
-                    <div>Small Tree Removal</div>
-                    <div>Leaf and Brush removal</div>
+                    <div>Tune ups</div>
+                    <div>Brake adjustments and replacements</div>
+                    <div>Tube replacents</div>
+                    <div>Chain oiling and asjustments</div>
+                    <div>Handle Bar tightening</div>
+                    <div>Gear check ups</div>
+                    <div>Wheel tightening</div>
+                    <div>Overall Maintinence</div>
+                    <div>Quick release Adjustments</div>
+
                     </p>
                 </div>
             </div>
