--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Although you can use them, for a more unique website, replace these images with 
 						<ul class="dropdown-menu" aria-labelledby="about-us">
 							<li><a href="#">Baby Sitting</a></li>
 							<li><a href="landscaping.html">LandScaping</a></li>
-							<li><a href="#">Bike Repair</a></li>
+							<li><a href="bikerepair.html">Bike Repair</a></li>
 						</ul>
 					</li>
                     <li>
@@ -105,7 +105,7 @@ Although you can use them, for a more unique website, replace these images with 
 				</div>
             </a>
 
-			<a href="#">
+			<a href="bikerepair.html">
 				<div class="col-md-4 promo-item item-3">
 					<h3>
 						Bike Repair
