--- a/landscaping.html
+++ b/landscaping.html
@@ -69,7 +69,7 @@ Although you can use them, for a more unique website, replace these images with 
 						</ul>
 					</li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="ContactUs.html">Contact Us</a>
                     </li>
                 </ul>
 
