--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Although you can use them, for a more unique website, replace these images with 
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                	<span class="glyphicon glyphicon-apple" style="font-size: 60px"></span>
+                	<span class="glyphicons glyphicons-lawnmower" style="font-size: 60px"></span>
                     <h2 class="section-heading">What we do</h2>
                     <p class="text-light">The two brothers of the cass family who are looking to assist you in any way. We have four years of expeariance with baby sitting many different children. We have three years of expeariance landscaping, specializing in mowing lawns. We have also been fixing, tinkering, and working with bikes for two years.</p>
                 </div>
