--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Although you can use them, for a more unique website, replace these images with 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
 						<ul class="dropdown-menu" aria-labelledby="about-us">
-							<li><a href="#">Baby Sitting</a></li>
+							<li><a href="babysitting.html">Baby Sitting</a></li>
 							<li><a href="landscaping.html">LandScaping</a></li>
 							<li><a href="bikerepair.html">Bike Repair</a></li>
 						</ul>
@@ -90,7 +90,7 @@ Although you can use them, for a more unique website, replace these images with 
     <!-- Promos -->
 	<div class="container-fluid">
         <div class="row promo">
-        	<a href="#">
+        	<a href="babysitting.html">
 				<div class="col-md-4 promo-item item-1">
 					<h3>
 						Baby Sitting
