--- a/babysitting.html
+++ b/babysitting.html
@@ -95,7 +95,7 @@ Although you can use them, for a more unique website, replace these images with 
                 	<span class="glyphicon glyphicon-apple" style="font-size: 60px"></span>
                     <h2 class="section-heading">Services we offer</h2>
                     <p class="text-light">
-                    <h3>We have lots of expeariance with children of all ages. We own pleanty of toys, games and even a swingset to entertain the children. We are helpful and will assist with school work and/ot reading during the school year.</h3>
+                    <h3>We have lots of expeariance with children of all ages. We own pleanty of toys, games and even a swingset to entertain the children. We are helpful and will assist with school work and/or reading during the school year.</h3>
 
                     </p>
                 </div>
