--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Although you can use them, for a more unique website, replace these images with 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>CassBrothers Online</title>
+    <title>CassBrothers' Online</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -48,13 +48,14 @@ Although you can use them, for a more unique website, replace these images with 
                 </button>
                 <a class="navbar-brand" href="#">
                 	<span class="glyphicon glyphicon-fire"></span>
-                	CassBrothers Online
+                	CassBrothers' Online
                 </a>
             </div>
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active">
+                        <h3>
                         <a href="#">Home</a>
                     </li>
                     <li>
@@ -81,7 +82,7 @@ Although you can use them, for a more unique website, replace these images with 
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Cass Brother's Business</h1>
+                <h1>Cass Brothers' Business</h1>
                 <p>Two brothers commited to delivering quality and making your life an ease!</p>
                 <a href="ContactUs" class="btn btn-primary btn-lg">Hire Now</a>
             </div>
@@ -120,7 +121,7 @@ Although you can use them, for a more unique website, replace these images with 
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                	<span class="glyphicons glyphicons-lawnmower" style="font-size: 60px"></span>
+                	<span class="glyphicons glyphicons-apple" style="font-size: 60px"></span>
                     <h2 class="section-heading">What we do</h2>
                     <p class="text-light">The two brothers of the cass family who are looking to assist you in any way. We have four years of expeariance with baby sitting many different children. We have three years of expeariance landscaping, specializing in mowing lawns. We have also been fixing, tinkering, and working with bikes for two years.</p>
                 </div>
